# django-order-service

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
order_service/: settings.py  urls.py
